# kyberium

./: .gitignore  LICENSE  README.md  organize_tests.py  push_to_remotes.py  pytest.ini  requirements.txt  run_tests.py  tox.ini
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  Kyberium_protocol_flux_diagram.mmd  README_COMPLET.md  SECURITY.md  TEST_SUMMARY.md  api_reference.md  architecture.md  architecture_technique.md  audit_conformite_gplv3_kyberium.md  audit_formel_kyberium.md  class_diagram_kyberium.puml  class_diagram_mermaid.md  diagram_class_kyberium_messenger.mmd  diagram_class_kyberium_protocol.mmd  flux_diagram_kybberium_messenger.mmd  generate_diagram.py  guide_integration_exemples.md  testing.md
examples/: interop_test.py
kyberium/: __init__.py
kyberium/api/: __init__.py  session.py
kyberium/bindings/cpp/: CMakeLists.txt  INTEGRATION.md  kyberium_cpp.cpp  kyberium_jni.cpp  test_kyberium_jni.cpp
kyberium/kdf/: __init__.py  interface.py  sha3.py
kyberium/kem/: __init__.py  interface.py  kyber.py
kyberium/ratchet/: __init__.py  interface.py  triple_ratchet.py
kyberium/signature/: __init__.py  dilithium.py  interface.py
kyberium/symmetric/: __init__.py  aesgcm.py  chacha20.py  interface.py
kyberium/utils/: __init__.py  exceptions.py
messenger_app/: README.md  debug_triple_ratchet.py  kyberium_server.py  kyberium_tk_simple_client.py  requirements.txt
messenger_app/flutter_app/: README.md  pubspec.yaml
tests/: __init__.py  test_triple_vs_double_ratchet.py
tests/integration/: __init__.py  test_api.py  test_integration_python.py  test_interoperability.py  test_simple_integration.py
tests/messenger/: __init__.py  test_gui_fix.py  test_integration.py  test_kyberium_simple.py  test_multi_users.py  test_private_messages.py  test_triple_ratchet.py
tests/performance/: __init__.py
tests/unit/: __init__.py  (+3 more)
(+17 files in other folders)
